@startuml
abstract class model.DBModel
annotation java.lang.Override
class java.sql.Connection
class java.sql.DriverManager
class java.sql.PreparedStatement
class java.sql.ResultSet
class java.sql.SQLException
class java.util.ArrayList
class model.Department
class model.EmpProj
class model.Employee
class model.ExtendedEmpProj
class model.ExtendedEmployee
class model.ExtendedProject
class model.Project
interface model.DML
interface model.DQL
model.Department --|> model.DBModel
model.Department ..> java.lang.Override
model.EmpProj --|> model.DBModel
model.EmpProj ..> java.lang.Override
model.Employee --|> model.DBModel
model.Employee ..> java.lang.Override
model.ExtendedEmpProj --|> model.DBModel
model.ExtendedEmpProj ..> java.lang.Override
model.ExtendedEmployee --|> model.DBModel
model.ExtendedEmployee ..> java.lang.Override
model.ExtendedProject --|> model.DBModel
model.ExtendedProject ..> java.lang.Override
model.Project --|> model.DBModel
model.Project ..> java.lang.Override
@enduml